# research

./: README  stack.xml
3dmap_server/: .cproject  .project  .pydevproject  cmake_install.cmake  mainpage.dox
gicp/: .cproject  .project  .pydevproject  cmake_install.cmake
gicp/include/ccny_gicp/: octree_pointcloud_storage.h  octree_pointcloud_storage.hpp
openni_launch/: mainpage.dox  manifest.xml~
openni_launch/launch/: openni.launch  openni_play.launch  openni_play.launch~  openni_record.launch  openni_record.launch~
openni_launch/launch/includes/: device.launch  live_data.launch  live_data.launch~  play_data.launch  play_data.launch~  proc_data.launch~  record_data.launch  record_data.launch~
rgbd/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml  resizer_nodelet.xml
rgbd/cfg/: RGBD_exp.vcg  feature.cfg
rgbd/include/ccny_rgbd/: util.h
rgbd/include/ccny_rgbd/features/: canny_detector.h~  feature_detector.h  feature_detector.h~  feature_viewer.h  feature_viewer.h~  gft_detector.h  klt_detector.h  orb_detector.h  surf_detector.h
rgbd/include/ccny_rgbd/filter/: resizer.h
rgbd/include/ccny_rgbd/nodelet/: resizer_nodelet.h
rgbd/include/ccny_rgbd/registration/: dense_tracker.h  dense_tracker.h~  feature_history.h  feature_history.hpp~  icp_kd.h  sparse_tracker.h  sparse_tracker.h~  sparse_tracker_am.h  sparse_tracker_f.h~  vo_icp.h
rgbd/include/ccny_rgbd/structures/: edge.h  rgbd_frame.h  rgbd_frame.h~  rgbd_frame2.h  rgbd_keyframe.h
rgbd/launch/: dense_mapping.launch  dense_tracker_kd.launch  dense_tracker_octree.launch  resizer_nodelet.launch  rviz.launch  sparse_dense_kd_mapping.launch  sparse_dense_octree_mapping.launch  sparse_f_mapping.launch  sparse_mapping.launch  sparse_tracker.launch  vo.launch
rgbd/src/: util.cpp
rgbd/src/features/: canny_detector.cpp~  feature_detector.cpp  feature_detector.cpp~  feature_viewer.cpp  feature_viewer.cpp~  gft_detector.cpp  klt_detector.cpp  orb_detector.cpp  surf_detector.cpp  surf_detector.cpp~
rgbd/src/filter/: resizer.cpp
rgbd/src/node/: dense_tracker_node.cpp  feature_viewer_node.cpp  resizer_node.cpp  sparse_tracker_am_node.cpp  sparse_tracker_f_node.cpp  sparse_tracker_node.cpp  vo_icp_node.cpp
rgbd/src/nodelet/: resizer_nodelet.cpp
rgbd/src/registration/: dense_tracker.cpp  feature_history.cpp  sparse_tracker.cpp  sparse_tracker_am.cpp  sparse_tracker_f.cpp  vo_icp.cpp
rgbd/src/structures/: edge.cpp  rgbd_frame.cpp  rgbd_frame.cpp~  rgbd_frame2.cpp  rgbd_keyframe.cpp
rgbd_benchmark/launch/: record_bag.launch
rgbd_launch/: manifest.xml
rgbd_launch/launch/: openni.launch  openni_play.launch  openni_record.launch
rgbd_launch/launch/include/: live_data.launch  play_data.launch  proc_data.launch  record_data.launch
toro/: Makefile
